[gd_scene load_steps=5 format=3 uid="uid://cu07udcl6h7nc"]

[ext_resource type="Script" uid="uid://c1hetdgacdqk4" path="res://scenes/worlds/game_board/game_board.gd" id="1_t1llu"]
[ext_resource type="Script" uid="uid://ci35q3sn76xtn" path="res://scripts/managers/play_tiles_manager.gd" id="2_yhsbf"]
[ext_resource type="PackedScene" uid="uid://d1aq7ya3d2yrw" path="res://scenes/entities/player/player.tscn" id="3_yhsbf"]
[ext_resource type="Script" uid="uid://b8xbo051xxcd7" path="res://scenes/worlds/game_board/ui/ui.gd" id="4_csl0o"]

[node name="GameBoard" type="Node2D" groups=["GameBoard"]]
script = ExtResource("1_t1llu")

[node name="PlayTilesManager" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 615)
script = ExtResource("2_yhsbf")

[node name="Player" parent="." instance=ExtResource("3_yhsbf")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_csl0o")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 43.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="RollDieButton" type="Button" parent="CanvasLayer/UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Roll For Movement"

[node name="MoveTotalLabel" type="Label" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="MoveUp" type="Button" parent="CanvasLayer/UI/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Move Up"

[node name="MoveDown" type="Button" parent="CanvasLayer/UI/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Move Down"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/UI/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "End Turn"

[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/HBoxContainer/RollDieButton" to="CanvasLayer/UI" method="_on_roll_die_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/HBoxContainer2/MoveUp" to="CanvasLayer/UI" method="_on_move_up_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/HBoxContainer2/MoveDown" to="CanvasLayer/UI" method="_on_move_down_pressed"]
